--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/mystyles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
         <div id="lead-content">
             <h1>Manjulata Chivukula</h1>
             <h2>Data Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="Manjulata_Chivukula_CV.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -75,9 +76,10 @@
                     <p>
                         My name is Manjulata Chivukula, I am a graduate student in School of Informatics, Computing and Engineering, Indiana University, Bloomington, Indiana.
                         Prior, to joining Data Science program for MS. I worked in Indiana University as Senior software developer for about 9 years. Before joining IU as staff, I got my Master’s degree in Computer Science from the Department of Computer Science, Indiana University, Bloomington.
-                        
-                        Before joining Indiana University for graduate work, I worked in India for LVL7 Systems (a Broadcomm Company) for two years working on the development and testing of IPv4 and IPv6 network protocols for routers and switches.   
                     </p>
+                    <p>
+                        Before joining Indiana University for graduate work, I worked in India for LVL7 Systems (a Broadcomm Company) for two years working on the development and testing of IPv4 and IPv6 network protocols for routers and switches.   
+                    </p> 
                 </div>
             </div>
         </div>
@@ -142,7 +144,7 @@ Currently, working on implementation of tableau dashboards for various social me
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/elephant.JPG" />
+                        <img src="images/elephant.JPG" width="224" height="224"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -158,7 +160,7 @@ Currently, working on implementation of tableau dashboards for various social me
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/mnist.png" />
+                        <img src="images/mnist.png" width="224" height="224"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -213,7 +215,7 @@ Currently, working on implementation of tableau dashboards for various social me
                 <strong>Manjulata Chivukula</strong><br>
                 3919 East Bennington Blvd<br>
                 Bloomington, Indiana 47401<br>
-                <abbr title="Phone">P:</abbr> (812) 606-2781
+                <abbr title="Phone">P:</abbr> (812) 606-2781 <br/>
                 <a href="mailto:mchivuku@iu.edu">mchivuku@iu.edu</a>
               </address> 
         <!-- End #contact-form -->
