--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/mystyles.css" rel="stylesheet">
+    <style>
+    #lead-overlay{
+background-color: rgba(20,40,100,0.8)
+}
+.vtimeline-icon{
+    background:rgba(20,40,100,0.8)
+}
+
+#mobile-menu-open{
+    color:rgba(20,40,100,0.8)
+}
+
+a {
+    color:rgba(20,40,100,0.8);
+    text-decoration: none;
+}
+
+address > a{
+    color:white;
+    text-decoration: none;
+}
+    </style>
 </head>
 
 <body>
@@ -77,6 +99,7 @@
                         My name is Manjulata Chivukula, I am a graduate student in School of Informatics, Computing and Engineering, Indiana University, Bloomington, Indiana.
                         Prior, to joining Data Science program for MS. I worked in Indiana University as Senior software developer for about 9 years. Before joining IU as staff, I got my Master’s degree in Computer Science from the Department of Computer Science, Indiana University, Bloomington.
                     </p>
+                    <br/>
                     <p>
                         Before joining Indiana University for graduate work, I worked in India for LVL7 Systems (a Broadcomm Company) for two years working on the development and testing of IPv4 and IPv6 network protocols for routers and switches.   
                     </p> 
