--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Currently, working on implementation of tableau dashboards for various social me
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/elephant.JPG" width="100" height="100"/>
+                        <img src="images/elephant.JPG" width="200" height="200"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -162,7 +162,7 @@ Currently, working on implementation of tableau dashboards for various social me
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/mnist.png" width="100" height="100"/>
+                        <img src="images/mnist.png" width="200" height="200"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -188,6 +188,8 @@ Currently, working on implementation of tableau dashboards for various social me
                 <li>C#</li>
                 <li>PHP</li>
                 <li>CSS</li>
+                <li>Tableau</li>
+                <li>Alteryx</li>
             <li>JavaScript</li>
             <li>Node.js</li>
             <li>AngularJs</li>
