--- a/index.html
+++ b/index.html
@@ -89,23 +89,24 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Professional Experience</h2>
+        <h2 class="heading">Professional Experience (Current projects) </h2>
         <div id="experience-timeline">
                 <div data-date="May 2019 – Present">
                         <h3>Indiana University</h3>
                         <h4>Data Engineer</h4>
                         <p>
-Currently, working on implementation of tableau dashboards for various social media channels for IU like twitter, facebook, instagram and linkedin to draw insights into student engagement with the goal to increase student enrollment and retention.
+Currently, working on implementation of tableau dashboards for various social media channels for IU like twitter, facebook, instagram and linkedin with a goal to provide insight into social media traffic for IU such that,  a successful socialmedia strategy can be setup to maximize brand awareness and brand positioning for IU.
                         </p>
                 </div>
                 <div data-date="August 2018 – April 2019">
                         <h3>Pacers Sports and Entertainment</h3>
                         <h4>Part-time Data Analyst</h4>
                         <p>
-                                Developed visualizations for the WNBA game survey data to help understand the impact of in-game entertainment, food and beverage services and other in-game services on ticket sales; analyzed the data to help with identifying potential season ticket purchasers and the promotions that need to be provided
-                        </p>
+                            Developed visualizations for the WNBA game survey data to help understand the impact of in-game entertainment, food and beverage services and other in-game services on ticket sales; analyzed the data to help withidentifying potential season ticket purchasers and the promotions that need to be provided                        </p>
                         <a href="https://github.com/mchivuku/pacers-indiana-fever-visualizations">View Project</a>
                     </div>
+
+                    <h3> And many more, please checkout my resume:  <a href="Manjulata_Chivukula_CV.pdf" class="btn-rounded-white">Resume</a> </h3>
 
             
         </div>
