--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ Currently, working on implementation of tableau dashboards for various social me
                         <a href="https://github.com/mchivuku/pacers-indiana-fever-visualizations">View Project</a>
                     </div>
 
-                    <div data-date="August 2010 – May 2019">
-                        <h3> And many more, please checkout my resume:  <a href="Manjulata_Chivukula_CV.pdf" class="btn-sm-rounded">Resume</a> </h3>
+                    <div>
+                        <h3> more in my resume: <a href="Manjulata_Chivukula_CV.pdf" class="btn-sm-rounded">Resume</a> </h3>
                     </div>
                     
 
