--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Currently, working on implementation of tableau dashboards for various social me
 
             
         </div>
-        <h3> more in my resume: <a href="Manjulata_Chivukula_CV.pdf" class="btn-sm-rounded">Resume</a> </h3>
+        <h3> more in my resume: <a href="Manjulata_Chivukula_CV.pdf" class="btn-sm-rounded">resume</a> </h3>
     </div>
     <!-- End #experience -->
 
@@ -180,6 +180,7 @@ Currently, working on implementation of tableau dashboards for various social me
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+                <h3> more in my resume: <a href="Manjulata_Chivukula_CV.pdf" class="btn-sm-rounded">resume</a> </h3>
             </div>
         </div>
     </div>
