--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div id="lead-content">
             <h1>Manjulata Chivukula</h1>
             <h2>Data Engineer</h2>
-            <a href="Manjulata_Chivukula_CV.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="Manjulata_Garimella_CV.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
