--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- End #about -->
 
     
-    <div id="contact">
+    <div id="contact" style="color: white;">
         <h2>Get in Touch</h2>
         <!--div id="contact-form">
             <form method="POST" action="https://formspree.io/email@email.com">
